# ieeg_data_loader

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/: main.py
src/data/: __init__.py  clear_data_loader.py  data_loader.py  dataset.py  preprocess.py
src/ieeg_data_loader/: main.py
src/ieeg_data_loader/data/: data_loader.py  dataset.py
src/ieeg_data_loader/prepare_audio_visual_data/: prepare_data.py
src/ieeg_data_loader/prepare_clear_data/: prepare_data.py
src/ieeg_data_loader/prepare_clear_data/setting_files/: Dataset_summary.csv  Dataset_summary_imagine.csv  flicker_shape_task.json  flicker_task.json
src/ieeg_data_loader/utils/: connectivity.py  utils.py
src/ieeg_data_loader/utils/multitapper/: example.py  multitaper_spectrogram_python.py
src/ieeg_data_loader/visualization/: __init__.py  pca_analysis_visualization.py
src/prepare_audio_visual_data/: prepare_data.py
src/prepare_clear_data/setting_files/: imagine_task.json  msequence_task.json
src/prepare_clear_data/setting_files/csv files/: p01_1_msequence.csv  p02_1_flicker.csv  p03_1_flicker.csv  p04_1_flicker.csv  p04_2_flicker.csv  p04_3_flicker.csv  p04_4_flicker.csv  p05_1_flicker.csv  p05_1_imagine.csv  p06_1_flicker.csv  p07_1_flicker.csv  p07_1_imagine.csv  p07_2_flicker.csv  p07_2_imagine.csv  p08_1_flicker.csv  p09_4_flicker.csv  p10_1_imagine.csv  p10_2_flicker.csv  p11_1_flicker.csv  p11_1_imagine.csv  (+7 more)
src/utils/: utils.py
src/utils/multitapper/: __init__.py
src/visualization/: graph_visualization.py  pca_analysis_visualization.py  vizualize_utils.py
(+20 files in other folders)
