[metadata]
name = ieeg_data_loader
version = 0.0.1
author = Navid Ziaei
author_email = nziaei@wpi.edu
description = A package for loading iEEG data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Navid-Ziaei/ieeg_data_loader
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src